--- a/src/frontend/src/assets/sass/black-dashboard.scss
+++ b/src/frontend/src/assets/sass/black-dashboard.scss
@@ -62,7 +62,7 @@
  // Custom components
 
  @import "black-dashboard/custom/alerts.scss";
- @import "black-dashboard/custom/buttons.scss";
+ //@import "black-dashboard/custom/buttons.scss";
  @import "black-dashboard/custom/dropdown.scss";
  @import "black-dashboard/custom/footer.scss";
  @import "black-dashboard/custom/forms.scss";
