--- a/src/frontend/src/assets/sass/black-dashboard/custom/_variables.scss
+++ b/src/frontend/src/assets/sass/black-dashboard/custom/_variables.scss
@@ -27,8 +27,8 @@ $gray-800: #32325d !default;   // Line heading color
 $gray-900: #212529 !default;
 $link-disabled:              #666666 !default;
 $transparent-bg:             transparent !default;
-$light-bg:                   #f5f6fa !default;
-$dark-background:            #555555 !default;
+$light-bg:                   #f4f5f7 !default;
+$dark-background:            #f4f5f7 !default;
 
 
 $grays: () !default;
@@ -44,7 +44,7 @@ $grays: map-merge((
   "900": $gray-900
 ), $grays);
 
-$blue:    #5e72e4 !default;
+$blue:    #16173d !default;
 $indigo:  #5603ad !default;
 $purple:  #8965e0 !default;
 $pink:    #f3a4b5 !default;
@@ -100,9 +100,9 @@ $default-color-opacity:      rgba(182, 182, 182, .6) !default;
 $orange-color:               #f96332 !default;
 
 $default:       #344675 !default;
-$primary:       #e14eca !default;
+$primary:       #6719e0 !default;
 $secondary:     #f4f5f7 !default;
-$success:       #00f2c3 !default;
+$success:       #13fac8 !default;
 $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
@@ -255,7 +255,7 @@ $section-colors: map-merge((
 
 // Links
 
-$link-color:                $primary !default;
+$link-color:                $blue !default;
 $link-decoration:           none !default;
 $link-hover-color:          darken($link-color, 15%);
 $link-hover-decoration:     none !default;
